2003-09-11  Alp Toker  <alp@atoker.com>

	* generator/Parameters.cs: Handle string length parameters specified
	not just as int but also signed/unsigned int, long or short

2003-09-07  Alp Toker  <alp@atoker.com>

	* makefile.win32: New clean and release targets, and don't bother
	building the samples (sample/makefile.win32 is out of date anyway)
	* api/makefile.win32:
	* glue/makefile.win32:
	* makefile.win32: Glade# works perfectly on win32 now; include it in
	the default build
	* sample/GladeTest.cs:
	* sample/GladeViewer.cs: Remove Gnome dependency and clean up
	* glue/makefile.win32: Add -mms-bitfields for MSVC function name
	mangling compatibility

2003-09-06  Alp Toker  <alp@atoker.com>

	* api/gdk-api.xml:
	* sources/Gdk.metadata: out params for Gdk.Window.GetInternalPaintInfo
	* glade/makefile.win32: new win32 makefile
	* glue/win32dll.c:
	* glue/makefile.win32: Patch to remove cygwin1.dll dependency on win32
	from Todd Berman <tberman@gentoo.org>
	* glue/makefile.win32: Update list of sources
	* glue/Makefile.am: Remind people to keep makefile.win32 up to date

2003-09-03 Aleksey Sanin <aleksey@aleksey.com>
 
 	* parser/GAPI/Metadata.pm: enable enums processing using
 	<class/> element syntax
 

2003-09-02  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* gda/Makefile.in: Fixed bad nowarn options

2003-08-31  Alp Toker  <alp@atoker.com>

	* api/gdk-api.xml:
	* sources/Gdk.metadata: out params for Gdk.Window.GetOrigin

2003-08-30  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* gdk/Pixbuf.custom: use windows dll name. Removed DllImport that is
	already in the generated file.

	* glib/Thread.cs: use windows dll name.

	* gtk/ThreadNotify.cs: close <remark> comment.

2003-08-28  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* gdk/Pixbuf.custom: Added missing DllImport statement and
	proper copyright header.
	* api/gtk-api.xml:
	* sources/Gtk.metadata: Fixed new_flag rules, they did not
	get applied to the gtk-api.xml.
	* generator/Parameters.cs: