@@ -38,10 +38,6 @@ namespace GtkSharp.Generation {
 			sw.WriteLine ("\tusing System.Runtime.InteropServices;");
 			sw.WriteLine ();
 
-			sw.WriteLine("\t\t/// <summary> " + Name + " Opaque Struct</summary>");
-			sw.WriteLine("\t\t/// <remarks>");
-			sw.WriteLine("\t\t/// </remarks>");
-
 			sw.WriteLine ("#region Autogenerated code");
 			sw.Write ("\tpublic class {0} : GLib.Opaque", Name);
 			sw.WriteLine (" {");
