@@ -1,3 +1,11 @@
+2003-09-11  Mike Kestner  <mkestner@ximian.com>
+
+	* generator/Ctor.cs : kill inline doc comments once and for all
+	* generator/EnumGen.cs : ditto
+	* generator/Method.cs : ditto
+	* generator/OpaqueGen.cs : ditto
+	* generator/Property.cs : ditto
+
 2003-09-11  Alp Toker  <alp@atoker.com>
 
 	* generator/Parameters.cs: Handle string length parameters specified
